# MemTopic

./: CLAUDE.md  README.md
MemTopic/: build.gradle.kts  gradle.properties
MemTopic/app/: build.gradle.kts
MemTopic/app/src/main/: AndroidManifest.xml
MemTopic/app/src/main/res/values/: strings.xml
MemTopic/gradle/wrapper/: gradle-wrapper.properties
android/: build.gradle.kts  settings.gradle  settings.gradle.kts
android/app/: build.gradle  build.gradle.kts
android/app/src/androidTest/assets/: HelloWorld.txt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: accept.xml  add_topic.xml  border01.xml  config.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
android/app/src/main/res/layout/: activity_add_topic.xml  activity_config.xml  activity_main.xml
android/app/src/main/res/values/: style.xml  (+2 more)
android/app/src/main/res/values-ko/: strings.xml
android/app/src/main/res/values-night/: themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
docs/: README.md
docs/development/: branch-naming.md
docs/development/plans/: 2025-08-31-feature-41-circular-navigation.md  2025-08-31-feature-41-double-back-exit.md  2025-09-01-feature-8-create-app-icon.md  2025-09-03-feature-35-improve-parseContentToSentences.md  2025-09-12-feature-47-json-export-import.md  template.md
docs/reports/code-reviews/: 2025-08-29-comprehensive-analysis.md
docs/user-guides/: navigation-behavior.md
python/: .gitignore  app.py  pyproject.toml  requirements.txt
tests/: tts_gcp_en_sample.json  tts_sample.sh
(+98 files in other folders)
