[tool.poetry]
name = "speakrize"
version = "0.1.0"
description = ""
authors = ["nil-park <kwang0621@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
retry = "^0.9.2"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
